--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,19 @@ body,
   align-items: center;
 }
 
+.search {
+  margin: 1em 0 0.5em;
+  font-size: 2.2em;
+  outline: none;
+  border-radius: 12px;
+  border: none;
+  background: rgb(238 238 238 / 60%);
+  padding: 0.25em 0.75em;
+  max-width: calc(100% - 2em);
+  width: 420px;
+  transition: 0.2s ease;
+}
+
 section {
   width: 100%;
   margin: 1em 4em;
@@ -122,4 +135,44 @@ section .cards .card {
 
 .cards .card:hover .name {
   text-decoration: underline;
+}
+
+.loading {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-auto-flow: column;
+    place-content: center;
+    font-size: 2em;
+    background: rgb(255 255 255 / 60%);
+    backdrop-filter: blur(24px);
+    z-index: 9999;
+    gap: 16px;
+}
+
+.loading i {
+    width: 16px;
+    height: 16px;
+    background: #2e2e2e;
+    border-radius: 50%;
+    animation: search 450ms alternate infinite;
+}
+
+.loading i:nth-child(2) {
+    animation-delay: 150ms;
+}
+
+.loading i:nth-child(3) {
+    animation-delay: 300ms;
+}
+
+@keyframes search {
+    from {
+        transform: scaleX(1);
+    }
+
+    to {
+        transform: translateY(35px) scaleX(1.15);
+    }
 }
