--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   padding: 0;
   font-family: "Dongle", sans-serif;
   scroll-behavior: smooth;
+  box-sizing: content-box;
 }
 
 #root {
@@ -199,8 +200,8 @@ section .cards .card {
 
 .country button {
     background: #eee;
-    width: 50px;
-    height: 50px;
+    width: 16px;
+    height: 16px;
     position: absolute;
     right: 8px;
 }
